--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-native-seoul/kakao-login": "^5.4.2",
     "@react-native-seoul/naver-login": "^4.2.3",
     "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/native-stack": "^6.9.25",
+    "@react-navigation/stack": "^6.3.28",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-screens": "3.34.0"
+    "react-native-google-mobile-ads": "14.2.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
