feat: 인증/광고 라이브러리 설치 및 사용자 인증 기능 구현
- Auth 및 광고(Ad) 관련 SDK 라이브러리 설치 및 버전 설정
- 사용자 로그인/회원가입 API 연동 및 인증 로직 구현

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+            <data android:host="oath"
+            android:scheme="kakao{fa3fd7470a555b1c308efae73f4d4ce0}"/>
         </intent-filter>
       </activity>
     </application>
