--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
+    "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-google-mobile-ads": "14.2.2",
