--- a/ios/client/Info.plist
+++ b/ios/client/Info.plist
@@ -94,5 +94,14 @@
         
         <key>NSUserTrackingUsageDescription</key>
         <string>개인 맞춤형 광고를 제공하기 위해 사용자의 데이터가 사용됩니다.</string>
+
+    <key>UIAppFonts</key>
+    <array>
+        <string>Pretendard-Regular.ttf</string>
+        <string>Pretendard-Medium.ttf</string>
+        <string>Pretendard-Bold.ttf</string>
+        <string>Pretendard-ExtraBold.ttf</string>
+        <string>Pretendard-SemiBold.ttf</string>
+    </array>
 </dict>
 </plist>
