--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.5.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-seoul/kakao-login": "^5.4.2",
     "@react-native-seoul/naver-login": "^4.2.3",
@@ -18,12 +20,16 @@
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
     "@tanstack/react-query": "^5.90.12",
-    "axios": "^1.13.2",
+    "lottie-react-native": "^7.3.4",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-google-mobile-ads": "14.2.2",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -39,10 +45,11 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.2",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=18"
   }
 }
