--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
     "@tanstack/react-query": "^5.90.12",
-    "lottie-react-native": "^7.3.4",
+    "lottie-react-native": "6.4.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-google-mobile-ads": "14.2.2",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
+    "react-native-screens": "3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "zustand": "^5.0.9"
