--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 
   <uses-permission android:name="android.permission.INTERNET" />
 
+  <queries>
+      <package android:name="com.kakao.talk" />
+  </queries>
+
   <application
     android:name=".MainApplication"
     android:label="@string/app_name"
@@ -22,12 +26,17 @@
           <action android:name="android.intent.action.MAIN" />
           <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
+    </activity>
+
+    <activity
+      android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+      android:exported="true">
       <intent-filter>
           <action android:name="android.intent.action.VIEW" />
           <category android:name="android.intent.category.DEFAULT" />
           <category android:name="android.intent.category.BROWSABLE" />
-          <data android:host="oath"
-                android:scheme="kakao{fa3fd7470a555b1c308efae73f4d4ce0}"/>
+          <data android:host="oauth"
+                android:scheme="kakao58005ef7dbe2dd56f4dd5ee0c582801e" />
       </intent-filter>
     </activity>
   </application>
