--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.73.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-google-mobile-ads": "14.2.2",
+    "react-native-permissions": "^5.4.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "3.29.0",
     "react-native-svg": "^14.1.0",
