--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         targetSdkVersion = 35
         kotlinVersion = "1.9.24"
 		ndkVersion = "26.1.10909125"
+        googlePlayServicesAuthVersion = "19.2.0"
     }
     repositories {
         google()
@@ -15,6 +16,7 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
         classpath("com.android.tools.build:gradle:8.4.0")
+        classpath('com.google.gms:google-services:4.4.1')
     }
 }
 
