--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,8 @@ require Pod::Executable.execute_command('node', ['-p',
   )', __dir__]).strip
 
 platform :ios, '15.1'
+
+ENV['RNFirebaseAsStaticFramework'] = 'true'
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
@@ -13,9 +15,8 @@ if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
   use_frameworks! :linkage => linkage.to_sym
 else
-  use_modular_headers!
+  use_frameworks! :linkage => :static
 end
-
 target 'Neurous' do
   config = use_native_modules!
 
@@ -36,11 +37,7 @@ target 'Neurous' do
       target.build_configurations.each do |config|
         config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.1'
         
-        # Firebase Swift 모듈을 위한 설정
-        if target.name.start_with?('Firebase')
-          config.build_settings['DEFINES_MODULE'] = 'YES'
-          config.build_settings['SWIFT_VERSION'] = '5.0'
-        end
+
       end
     end
   end
