--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.28",
     "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "lottie-react-native": "6.4.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
