feat: 캐릭터 기준확인하기 스타일/컴포넌트 설정 및 아이콘 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "types": []
+    //"types": [] // develop에는 없었음. react 사용 위해 주석 처리.
+    "esModuleInterop": true, // develop에는 없었음.
   },
   "include": ["src/**/*", "declarations.d.ts", "__tests__/**/*"]
 }
