--- a/ios/Neurous/GoogleService-Info.plist
+++ b/ios/Neurous/GoogleService-Info.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>424320333528-de3lsl1sqg407ck8nrk8jmodmhertul2.apps.googleusercontent.com</string>
+	<string>1081679299790-po4as4ci605ich7podbelqhq5bop8iai.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.424320333528-de3lsl1sqg407ck8nrk8jmodmhertul2</string>
+	<string>com.googleusercontent.apps.1081679299790-po4as4ci605ich7podbelqhq5bop8iai</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>424320333528-4kkfevhkgkcm6c2beufbdq08tf0kssr9.apps.googleusercontent.com</string>
+	<string>1081679299790-5psm92vu72hbpdcndsq9dplvc0e4b3d1.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCvW-xajcxIsfsKoc96vnvOL1ihSn-3A0E</string>
+	<string>AIzaSyBW0P43--sWylkopx3bXhY3JDZVd6CWc2c</string>
 	<key>GCM_SENDER_ID</key>
-	<string>424320333528</string>
+	<string>1081679299790</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.neurous.app</string>
 	<key>PROJECT_ID</key>
-	<string>neurous-d632a</string>
+	<string>neurous-b290f</string>
 	<key>STORAGE_BUCKET</key>
-	<string>neurous-d632a.firebasestorage.app</string>
+	<string>neurous-b290f.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:424320333528:ios:980dd3a741185e3a48c9ad</string>
+	<string>1:1081679299790:ios:454610318b56c75388fc9f</string>
 </dict>
 </plist>
