refactor: admob 앱 ID 원복

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Neurous",
   "displayName": "Neurous",
   "react-native-google-mobile-ads": {
-    "android_app_id": "ca-app-pub-2195740935444660/8657864344",
-    "ios_app_id": "ca-app-pub-2195740935444660/8267622737"
+    "android_app_id": "ca-app-pub-2195740935444660~4502819309",
+    "ios_app_id": "ca-app-pub-2195740935444660~4424580644"
   }
 }
