refactor: admob 앱 ID 원복 완료(안드로이드 재설정)

--- a/ios/Neurous/Info.plist
+++ b/ios/Neurous/Info.plist
@@ -57,6 +57,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.googleusercontent.apps.424320333528-3em9k816cropmqufki5vq4cb4nrrcrof</string>
+				<string>com.googleusercontent.apps.424320333528-de3lsl1sqg407ck8nrk8jmodmhertul2</string>
 			</array>
 		</dict>
 		<dict>
