--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,7 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+MYAPP_UPLOAD_STORE_FILE=neuros-app.keystore
+MYAPP_UPLOAD_KEY_ALIAS=neuros-key
+MYAPP_UPLOAD_STORE_PASSWORD=newrous
+MYAPP_UPLOAD_KEY_PASSWORD=newrous
