--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools">
 
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
   <queries>
-      <package android:name="com.kakao.talk" />
+    <package android:name="com.kakao.talk" />
   </queries>
 
   <application
@@ -16,6 +17,12 @@
     android:usesCleartextTraffic="true"
     android:networkSecurityConfig="@xml/network_security_config"
     android:theme="@style/AppTheme">
+
+    <meta-data
+      android:name="com.google.android.gms.ads.APPLICATION_ID"
+      android:value="ca-app-pub-3940256099942544~3347511713"
+      tools:replace="android:value" />
+
     <activity
       android:name=".MainActivity"
       android:label="@string/app_name"
@@ -23,9 +30,9 @@
       android:launchMode="singleTask"
       android:windowSoftInputMode="adjustResize"
       android:exported="true">
-        <intent-filter>
-          <action android:name="android.intent.action.MAIN" />
-          <category android:name="android.intent.category.LAUNCHER" />
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
 
@@ -33,12 +40,14 @@
       android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
       android:exported="true">
       <intent-filter>
-          <action android:name="android.intent.action.VIEW" />
-          <category android:name="android.intent.category.DEFAULT" />
-          <category android:name="android.intent.category.BROWSABLE" />
-          <data android:host="oauth"
-                android:scheme="kakao58005ef7dbe2dd56f4dd5ee0c582801e" />
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data
+          android:host="oauth"
+          android:scheme="kakao58005ef7dbe2dd56f4dd5ee0c582801e" />
       </intent-filter>
     </activity>
+
   </application>
 </manifest>
